openshift/routes/backend-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: backend
  namespace: smartdeliveryops
  labels:
    app: smartdeliveryops
    component: backend
spec:
  to:
    kind: Service
    name: backend-service
  port:
    targetPort: 8001
  wildcardPolicy: None
