openshift/routes/frontend-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: frontend
  namespace: smartdeliveryops
  labels:
    app: smartdeliveryops
    component: frontend
spec:
  to:
    kind: Service
    name: frontend-service
  port:
    targetPort: 5173
  wildcardPolicy: None
